[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-webflow-exporter"
description = "A CLI tool to export Webflow pages"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{ name = "Simon Kobler", email = "github@kobler.me" }]
dependencies = [
    "requests==2.32.5", 
    "argparse==1.4.0",
    "beautifulsoup4==4.14.2",
    "halo==0.0.31",
    "pylint==3.3.9",
    "setuptools==80.9.0",
    "fastapi==0.118.2",
    "uvicorn==0.37.0",
]

[tool.setuptools]
packages = ["webexp"]

[project.scripts]
webexp = "webexp.cli:main"
